test/tests/stages/6_statements_and_conditional_expressions/valid/ternary.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CReturn: 
                CConditional: 
                  CBinary: 
                    CGreaterThan: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    CUnary: 
                      CNegate: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 4
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 5
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
